<resources>
    <string name="app_name">AsistenciaCafes</string>
    <string name="nombre_s">Nombre (s)</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirme_contrase_a">Confirme Contraseña</string>
    <string name="registarme">Registarme</string>
    <string name="login">Iniciar Sesión</string>
    <string name="newUser">Nuevo usario?</string>
    <string name="neewUser">Nuevo usuario?</string>
</resources>