<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <com.google.android.material.card.MaterialCardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:strokeColor="@color/black"
        app:strokeWidth="0.5dp"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_margin="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nombresTil"
                style="@style/MaterialAlertDialog.Material3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombresEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/nombre_s"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/appellidosTil"
                style="@style/MaterialAlertDialog.Material3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/appellidosEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/apellidos"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/correoelectronicoTil"
                style="@style/MaterialAlertDialog.Material3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/correoelectronicoEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/correo_electr_nico"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contrasenaTil"
                style="@style/MaterialAlertDialog.Material3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                android:layout_marginTop="12dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contrasenaEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/contrase_a"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/concontrasenaTil"
                style="@style/MaterialAlertDialog.Material3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="15">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/concontrasenaEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:hint="@string/confirme_contrase_a"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registrarBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/registarme"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>